added new shopping list api endpoints
